--- a/_html/index.html
+++ b/_html/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="pt">
 <head>
     <meta charset="UTF-8">
@@ -133,7 +133,7 @@
 </div>
 
 <footer class="container">
-    Feito com ❤ pela B7Web
+    
 </footer>
 </body>
-</html>
+</html> -->
